more work on inla tutorial (figures still missing)

--- a/sandbox/tutorials/inla/hrue.bib
+++ b/sandbox/tutorials/inla/hrue.bib
@@ -8382,6 +8382,24 @@ predictive process models},
                   {xxx}}
 }
 
+@Article{muff-etal-2013,
+   author = {{Muff}, S. and {Riebler}, A. and {Rue}, H. and {Saner}, P. and {Held}, L.},
+    title = "{Measurement error in GLMMs with INLA}",
+    journal = {ArXiv e-prints},
+    archivePrefix = "arXiv",
+    eprint = {1302.3065},
+    primaryClass = "stat.ME",
+	note = "http://arxiv.org/abs/1302.3065",
+    keywords = {Statistics - Methodology},
+    year = 2013,
+    month = feb,
+    adsurl = {http://adsabs.harvard.edu/abs/2013arXiv1302.3065M},
+    adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 @Comment  LocalWords:  Titterington IntStatRev Myrheim CVGIP Arjas ayesian JASA
