joint covariate modeling added on SPDE tutorial

--- a/tutorials/spde/spde-tutorial-introduction.tex
+++ b/tutorials/spde/spde-tutorial-introduction.tex
@@ -3,7 +3,7 @@
 
 If we have data measured on some locations, 
 by locations we mean some system of coordinate 
-reference to where are each data from, so we 
+reference where are each data from, so we 
 have a point refereed data set. 
 The point refereed data is very common in many 
 areas of science. These type of data appear on 
