--- a/tutorials/spde/spde-tutorial.bib
+++ b/tutorials/spde/spde-tutorial.bib
@@ -64,6 +64,20 @@ partial differential equation approach},
   pages = 	 {302-309}
 }
 
+@Article{geoR,
+  title = {geo{R}: a package for geostatistical analysis},
+  author = {{Ribeiro Jr}, P. J. and Diggle, P. J.},
+  journal = {R-NEWS},
+  year = {2001},
+  month = {June},
+  volume = {1},
+  number = {2},
+  pages = {14--18},
+  note = {ISSN 1609-3631},
+  url = {http://CRAN.R-project.org/doc/Rnews/},
+}
+
+
 @Article{lindgren:2012,
   author = 	 {Lindgren, F.},
   title = 	 {Continuous Domain Spatial Models in R-INLA},
@@ -148,5 +162,12 @@ Approximations (with discussion)},
   volume = 	 {59},
   number = 	 {2},
   pages = 	 {191-232},
+}
+
+@Article{muffetal:2013,
+  author = 	 {Muff, S. and Riebler, A. and Rue, H. and Saner, P. and Held, L.},
+  title = 	 {Measurement error in GLMMs with INLA},
+  journal = 	 {submitted},
+  year = 	 {2013}
 }
 
