--- a/tutorials/spde/spde-tutorial.tex
+++ b/tutorials/spde/spde-tutorial.tex
@@ -18,8 +18,10 @@
 \newcommand{\bbv}{\mbox{\protect \boldmath $v$}}
 \newcommand{\bbx}{\mbox{\protect \boldmath $x$}}
 
-\title{The R-INLA tutorial: SPDE models}
-\author{Elias}
+\title{\textbf{The R-INLA tutorial: SPDE models}\\
+Warning: work in progress...\\
+Suggestions are welcome to \texttt{elias@r-inla.org}}
+\author{Elias T. Krainski}
 
 \begin{document}
 \maketitle
@@ -44,6 +46,7 @@
 \input{spde-tutorial-toy}
 \input{spde-tutorial-rain}
 \input{spde-tutorial-semicontinuous}
+\input{spde-tutorial-jcovar}
 
 \bibliographystyle{apalike}
 \bibliography{spde-tutorial}
