work on SPDE tutorial: changes on joint covariate model and addition of a nonstationary example

--- a/tutorials/spde/spde-tutorial.tex
+++ b/tutorials/spde/spde-tutorial.tex
@@ -5,6 +5,7 @@
 \usepackage{amsmath,upquote,Rd,Sweave}
 
 \newcommand{\bA}{\mbox{\protect \boldmath $A$}}
+\newcommand{\bB}{\mbox{\protect \boldmath $A$}}
 \newcommand{\bF}{\mbox{\protect \boldmath $F$}}
 \newcommand{\bD}{\mbox{\protect \boldmath $D$}}
 \newcommand{\bW}{\mbox{\protect \boldmath $W$}}
@@ -12,6 +13,7 @@
 \newcommand{\bG}{\mbox{\protect \boldmath $G$}}
 \newcommand{\bK}{\mbox{\protect \boldmath $K$}}
 \newcommand{\bQ}{\mbox{\protect \boldmath $Q$}}
+\newcommand{\bM}{\mbox{\protect \boldmath $M$}}
 
 \newcommand{\bby}{\mbox{\protect \boldmath $y$}}
 \newcommand{\bbu}{\mbox{\protect \boldmath $u$}}
@@ -47,6 +49,7 @@ Suggestions are welcome to \texttt{elias@r-inla.org}}
 \input{spde-tutorial-rain}
 \input{spde-tutorial-semicontinuous}
 \input{spde-tutorial-jcovar}
+\input{spde-tutorial-nonstationar}
 
 \bibliographystyle{apalike}
 \bibliography{spde-tutorial}
