--- a/tutorials/spde/spde-tutorial.tex
+++ b/tutorials/spde/spde-tutorial.tex
@@ -5,7 +5,7 @@
 \usepackage{amsmath,upquote,Rd,Sweave}
 
 \newcommand{\bA}{\mbox{\protect \boldmath $A$}}
-\newcommand{\bB}{\mbox{\protect \boldmath $A$}}
+\newcommand{\bB}{\mbox{\protect \boldmath $B$}}
 \newcommand{\bF}{\mbox{\protect \boldmath $F$}}
 \newcommand{\bD}{\mbox{\protect \boldmath $D$}}
 \newcommand{\bW}{\mbox{\protect \boldmath $W$}}
