Added argument nq to control.mix.

--- a/r-inla.org/doc/hyper/mix/gaussian.tex
+++ b/r-inla.org/doc/hyper/mix/gaussian.tex
@@ -8,7 +8,7 @@
 	 	 	 \item[ prior ] loggamma 
 	 	 	 \item[ param ] 1 0.01 
 	 	 	 \item[ initial ] 0 
-	 	 	 \item[ fixed ] TRUE 
+	 	 	 \item[ fixed ] FALSE 
 	 	 	 \item[ to.theta ] \verb|function(x) log(x)| 
 	 	 	 \item[ from.theta ] \verb|function(x) exp(x)| 
 	 	 \end{description}
