--- a/sandbox/tutorials/inla/main.Rnw
+++ b/sandbox/tutorials/inla/main.Rnw
@@ -4,6 +4,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{block}
 \usepackage{my-showkeys}
+\usepackage{booktabs}
 \usepackage{amsmath}
 \usepackage{verbatim}
 
@@ -654,9 +655,9 @@ different (and higher) resolution of the posterior marginal.
 
 \chapter{Likelihood models}
 
-
-
 \section{Available models}
+
+
 
 \section{Setting priors for hyperparameters}
 
@@ -667,6 +668,253 @@ different (and higher) resolution of the posterior marginal.
 \chapter{Random effects models}
 
 \section{Available models}
+
+Table~\ref{tab:likelihoodModels} gives an overview of all implemented likelihood models. In the following we will shortly present the main definition and its properties.
+
+\begin{table}[h!]
+\begin{center}
+\begin{tabular}{ll}
+\toprule
+Model & Name\\
+\midrule
+Independent random noise &  {\tt iid}\\
+Random walk of order 1  &     {\tt rw1  }\\
+Random walk of order 2  &    {\tt rw2 }\\
+Random walk of order 2 on a lattice   &    {\tt rw2d  }\\
+Continuous random walk of order 2 &     {\tt crw2   }\\
+Model for seasonal variation &     {\tt seasonal  }\\
+Model for spatial effect   &   {\tt besag   }\\
+Model for spatial effect (proper version)  &    {\tt besagproper    }\\ 
+Model for weighted spatial effects   &    {\tt besag2 }\\
+Model for spatial effect + random effect &     {\tt bym }\\
+Autoregressive model of order 1  &     {\tt ar1 }\\
+Autoregressive model of order p &     {\tt ar}\\
+The Ornstein-Uhlenbeck process  &    {\tt ou}\\
+User defined structure matrix, type 0  &    {\tt generic0 }\\
+User defined structure matrix, type 1   &    {\tt generic1  }\\
+User defined structure matrix, type 2  &     {\tt generic2   }\\
+Model for correlated effects with Wishart prior &\\
+ (dimension 1, 2, 3, 4 and 5) &      {\tt iid1d, iid2d, iid3d, iid4d, iid5d}\\
+%(Quite) general latent model   &    {\tt z   }\\
+Gaussian field with Matern covariance function  &     {\tt matern2d   }\\
+Classical measurement error model &      {\tt mec     }\\
+Berkson measurement error model  &    {\tt meb }\\
+\bottomrule
+\end{tabular}
+\caption{List of latent Gaussian field implemented in the R inla package.}\label{tab:likelihoodModels}
+\end{center}
+\end{table}
+
+\subsection{Independent random noise}
+
+\subsection*{Parametrization}
+
+This model simply defines $\mathbf{x}$ to be a vector of independent
+and Gaussian distributed random variable (possibly scaled) with
+precision $\tau$:
+\begin{displaymath}
+    \pi(\mathbf{x}|\tau) = \prod_{i=1}^{n} \frac{1}{\sqrt{2\pi}}
+    \sqrt{(s_{i}\tau)}\exp\left(\frac{1}{2} (s_{i}\tau) x_{i}^{2}\right)
+\end{displaymath}
+where $s_{i} > 0$ is an optional fixed scale
+
+\subsection*{Hyperparameters}
+
+The precision parameter $\tau$ is represented as
+\begin{displaymath}
+    \theta =\log \tau
+\end{displaymath}
+and the prior is defined on $\mathbf{\theta}$.
+
+\subsection*{Specification}
+
+The independent model is specified inside the {\tt f()} function as
+\begin{verbatim}
+ f(<whatever>, model="iid", hyper = <hyper>, scale = <scale>)
+\end{verbatim}
+where the option \verb|scale| is optional and default to (all) $1$.
+
+% \subsubsection*{Hyperparameter specification and default values}
+% \input{../hyper/latent/iid.tex}
+
+\subsection*{Example}
+
+\begin{verbatim}
+n=12
+Ntrials = sample(c(80:100), size=n, replace=TRUE)
+eta = rnorm(n,0,0.5)
+prob = exp(eta)/(1 + exp(eta))
+y = rbinom(n, size=Ntrials, prob = prob)
+
+data=data.frame(y=y,z=1:n)
+
+formula=y~f(z,model="iid",
+           hyper=list(theta=list(prior="loggamma",param=c(1,0.01))))
+result=inla(formula,data=data,family="binomial",Ntrials=Ntrials)
+\end{verbatim}
+
+
+\subsection*{Notes}
+
+The option \verb|scale| defines the scaling in the same order as
+argument \verb|values|.  It is therefore adviced to also give argument
+\verb|values| when \verb|scale| is used to be sure that they are
+consistent.
+
+\subsection{Random walk of order 1}
+\subsection*{Parametrization}
+
+The random walk model of order $1$ (RW1) for the Gaussian vector
+$\mathbf{x}=(x_1,\dots,x_n)$ is constructed assuming independent
+increments:
+\[
+\Delta x_i = x_i-x_{i+1}\sim\mathcal{N}(0,\tau^{-1})
+\]
+The density for $\mathbf{x}$ is derived from its $n-1$ increments as
+\begin{eqnarray*}
+    \pi(\mathbf{x}|\tau) &\propto& \tau^{(n-1)/2}
+    \exp\left\{-\frac{\tau}{2}\sum (\Delta x_i)^2\right\}\\
+    & = &\tau^{(n-1)/2}\exp\left\{-\frac{1}{2}
+      \mathbf{x}^T\mathbf{Q}\mathbf{x} \right\}
+\end{eqnarray*}
+where $\mathbf{Q}=\tau\mathbf{R}$ and $\mathbf{R}$ is the structure
+matrix reflecting the neighbourhood structure of the model.
+The RW1 is intrinsic with rank deficiency 1.
+
+It is also possible to define a {\it cyclic} version of the RW1 model,
+in this case the graph is modified so that last node $x_n$ is
+neighbour of $x_{n-1}$ and $x_1$.
+\subsection*{Hyperparameters}
+
+The prior is defined on $\mathbf{\theta}$ which is defined as
+%\begin{displaymath}
+    $\theta =\log \tau$
+%\end{displaymath}
+
+
+\subsection*{Specification}
+
+The RW1 model is specified inside the {\tt f()} function as
+\begin{verbatim}
+ f(<whatever>, model="rw1", values=<values>, cyclic=<TRUE|FALSE>,
+              hyper = <hyper>)
+\end{verbatim}
+The (optional) argument {\tt values } is a numeric or factor vector
+giving the values assumed by the covariate for which we want the
+effect to be estimated. See next example for an application.
+ 
+% \subsubsection*{Hyperparameter spesification and default values}
+% \input{../hyper/latent/rw1.tex}
+% 
+
+\subsection*{Example}
+
+\begin{verbatim}
+n=100
+z=seq(0,6,length.out=n)
+y=sin(z)+rnorm(n,mean=0,sd=0.5)
+data=data.frame(y=y,z=z)
+
+formula=y~f(z,model="rw1",
+            hyper = list(prec = list(prior="loggamma",param=c(1,0.01))))
+result=inla(formula,data=data,family="gaussian")
+
+#here we estimate the effect only for some of the values in z
+formula1=y~f(z,model="rw1",
+             hyper = list(prec = list(prior="loggamma",param=c(1,0.01))),
+             values=z[seq(1,length(z),2)])
+result1=inla(formula1,data=data,family="gaussian")
+\end{verbatim}
+
+% 
+% \subsection*{Notes}
+% 
+% The RW1 is intrinsic with rank deficiency 1.
+% 
+% There exist also support to define irregular RW1 models.
+
+\subsection{Random walk of order 2}
+
+
+\subsection*{Parametrization}
+The random walk model of order $2$ (RW2) for the Gaussian vector
+$\mathbf{x}=(x_1,\dots,x_n)$ is constructed assuming independent
+second-orderincrements:
+\[
+\Delta^2 x_i = x_i-2\ x_{i+1}+x_{i+2}\sim\mathcal{N}(0,\tau^{-1})
+\]
+The density for $\mathbf{x}$ is derived from its $n-2$ second-order
+increments as
+\begin{eqnarray*}
+    \pi(\mathbf{x}|\tau) &\propto& \tau^{(n-2)/2} \exp\left\{-\frac{\tau}{2} \sum (\Delta^2 x_i)^2\right\}\\
+    & = &\tau^{(n-2)/2}\exp\left\{-\frac{1}{2}\mathbf{x}^T\mathbf{Q}\mathbf{x} \right\}
+\end{eqnarray*}
+where $\mathbf{Q}=\tau\mathbf{R}$ and $\mathbf{R}$ is the structure
+matrix reflecting the neighbourhood structure of the model. The RW2 is a intrinsic with rank deficiency 2.
+
+It is also possible to define a {\it cyclic} version of the RW2 model.
+
+\subsection*{Hyperparameters}
+
+The precision parameter $\tau$ is represented as
+\begin{displaymath}
+    \theta =\log \tau
+\end{displaymath}
+and the prior is defined on $\theta$.
+
+\subsection*{Specification}
+
+The RW2 model is specified inside the {\tt f()} function as
+\begin{verbatim}
+f(<whatever>, model="rw2", values=<values>, cyclic=<TRUE|FALSE>,
+              hyper = <hyper>)
+\end{verbatim}
+The (optional) argument {\tt values } is a numeric or factor vector
+giving the values assumed by the covariate for which we want the
+effect to be estimated. See the example for RW1 for an application.
+
+% \subsubsection*{Hyperparameter spesification and default values}
+% \input{../hyper/latent/rw2.tex}
+
+
+\subsection*{Example}
+
+\begin{verbatim}
+
+n=100
+z=seq(0,6,length.out=n)
+y=sin(z)+rnorm(n,mean=0,sd=0.5)
+data=data.frame(y=y,z=z)
+
+formula=y~f(z,model="rw2")
+result=inla(formula,data=data,family="gaussian")
+\end{verbatim}
+
+
+% \subsection*{Notes}
+% 
+% The RW2 is a intrinsic with rank deficiency 2.
+% 
+% There model also supports irregular locations or values.
+
+
+\subsection{Random walk of order 2 on a lattice}  
+\subsection{Continuous random walk of order 2}
+\subsection{Model for seasonal variation}
+\subsection{Model for spatial effect}
+\subsection{Model for spatial effect (proper version)}
+\subsection{Model for weighted spatial effects}
+\subsection{Model for spatial effect + random effect}
+\subsection{Autoregressive model of order 1}
+\subsection{Autoregressive model of order p}
+\subsection{The Ornstein-Uhlenbeck process}
+\subsection{User defined structure matrix, type 0}
+\subsection{User defined structure matrix, type 1}
+\subsection{User defined structure matrix, type 2}
+\subsection{Model for correlated effects with Wishart prior}
+\subsection{Gaussian field with Matern covariance function}
+\subsection{Classical measurement error model}
+\subsection{Berkson measurement error model}
 
 \section{General options}
 
